--- a/src/view/nluTrainView.fxml
+++ b/src/view/nluTrainView.fxml
@@ -12,26 +12,24 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.nluTrainViewController">
-    <children>
-        <BorderPane minHeight="100.0" minWidth="300.0" prefHeight="100.0" prefWidth="300.0" AnchorPane.bottomAnchor="400.0" AnchorPane.leftAnchor="600.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="400.0">
+<BorderPane minHeight="100.0" minWidth="300.0" prefHeight="800.0" prefWidth="1000.0" AnchorPane.bottomAnchor="40.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.nluTrainViewController">
             <center>
                 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
                     <children>
-                  <GridPane prefHeight="51.0" prefWidth="300.0">
+                  <GridPane alignment="CENTER" maxHeight="51.0" maxWidth="300.0" prefHeight="51.0" prefWidth="300.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="498.0" minWidth="10.0" prefWidth="498.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="546.0" minWidth="10.0" prefWidth="502.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Trainingsdatei:" />
+                        <Label prefHeight="30.0" prefWidth="100.0" text="Trainingsdatei:" />
                         <Label text="Name des neuen Models" GridPane.rowIndex="1" />
-                        <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" fx:id="trainFileChoiceBox"/>
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="modelNameTextField"/>
+                        <ChoiceBox fx:id="trainFileChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" />
+                        <TextField fx:id="modelNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                         <Button fx:id="trainButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Training starten">
@@ -42,6 +40,5 @@
                     </children>
                 </VBox>
             </center>
-        </BorderPane>
-    </children>
-</AnchorPane>
+
+</BorderPane>
