--- a/src/rasaCore/view/coreTestView.fxml
+++ b/src/rasaCore/view/coreTestView.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rasaCore.controller.CoreTestViewController">
@@ -24,33 +19,14 @@
                <HBox alignment="CENTER" prefHeight="45.0" prefWidth="700.0" BorderPane.alignment="CENTER">
                   <children>
                   <TextArea fx:id="inputMessage" prefHeight="45.0" prefWidth="639.0" />
-                     <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="62.0" text="Senden" fx:id="sendButton"/>
+                     <Button fx:id="sendButton" mnemonicParsing="false" prefHeight="44.0" prefWidth="62.0" text="Senden" />
                   </children>
                </HBox>
             </bottom>
       </BorderPane>
    </center>
    <left>
-      <VBox fx:id="sideBox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="300.0" spacing="8.0" BorderPane.alignment="CENTER">
-         <children>
-            <GridPane alignment="CENTER" prefHeight="56.0" prefWidth="200.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="0.0" prefWidth="64.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="136.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="29.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="267.0" minHeight="0.0" prefHeight="27.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label prefHeight="65.0" prefWidth="99.0" text="NLUModel:" />
-                  <Label prefHeight="17.0" prefWidth="70.0" text="CoreModel:" GridPane.rowIndex="1" />
-                  <ChoiceBox fx:id="nluModelChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" />
-                  <ChoiceBox fx:id="coreModelChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-               </children>
-            </GridPane>
-         </children>
-      </VBox>
+      <VBox fx:id="sideBox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="300.0" spacing="8.0" BorderPane.alignment="CENTER" />
    </left>
     </BorderPane>
 </AnchorPane>
